# Obstacle-Avoidance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compass_artifact_wf-8ef65e4c-05f5-4be6-a6c2-0fbd2e1571a3_text_markdown.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
docs/: algorithm.md  architecture.md  safety.md  wiring.md
examples/: 01_lidar_only.py  02_vfh_offline_replay.py  03_sitl_full_loop.py
scripts/: ld19_dump.py  mavlink_ping.py  plot_log.py  preflight.py
sim/launch/: sitl_gazebo.sh
sim/models/iris_lidar/: model.config  model.sdf
sim/params/: copter_avoid.parm
sim/worlds/: iris_avoidance.sdf
src/obstacle_avoidance/: __init__.py  config.py  pipeline.py  run.py
src/obstacle_avoidance/lidar/: __init__.py  crc_table.py  filters.py  ld19.py  synthetic.py
src/obstacle_avoidance/mavlink/: __init__.py  controller.py  telemetry.py  velocity.py
src/obstacle_avoidance/vfh/: __init__.py  plotting.py  vfh_plus.py
tests/: test_ld19_parser.py  test_mavlink_messages.py  test_vfh_plus.py
