[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obstacle-avoidance"
version = "0.1.0"
description = "Real-time UAV obstacle avoidance with LD19 LiDAR, VFH+, and a Pixhawk autopilot via pymavlink."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "obstacle-avoidance contributors" }
]
keywords = [
    "uav", "drone", "lidar", "ld19", "vfh", "vfh-plus",
    "obstacle-avoidance", "ardupilot", "pixhawk", "pymavlink",
    "jetson", "gazebo", "sitl"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyserial==3.5",
    "pymavlink==2.4.41",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "scipy==1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "black==24.4.2",
    "pytest==8.2.1",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
]
# `sim` is reserved for extras that only matter in simulation
# (e.g. gz-transport13 Python bindings). Installed via `pip install -e .[sim]`.
sim = []

[project.urls]
Homepage = "https://github.com/<YOUR-GITHUB-USERNAME>/obstacle-avoidance"
Issues = "https://github.com/<YOUR-GITHUB-USERNAME>/obstacle-avoidance/issues"

[project.scripts]
obstacle-avoidance = "obstacle_avoidance.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obstacle_avoidance = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["sim/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line length is handled by black
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "hardware: tests that require a connected LD19 LiDAR or Pixhawk (skipped in CI)",
    "sitl: tests that require a running ArduPilot SITL instance",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
